[project]
name = "sd-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==0.26.1",
    "diffusers==0.25.0",
    "fastapi==0.109.0",
    "pydantic==2.5.3",
    "torch==2.5.1",
    "torchvision>=0.20.1",
    "transformers==4.36.2",
    "uvicorn==0.27.0",
]
